--- a/index.html
+++ b/index.html
@@ -8,23 +8,32 @@
     <meta name="author" content="Dandy Llama" />
     <title>Whiskers Tribute Page</title>
     <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <main id="main">
-      <h1 id="title">Whiskers</h1>
-      <p id="tribute-info">A Tribute to a Beloved Feline Friend</p>
-      <figure id="img-div">
+    <main id="main" class="main">
+      <h1 id="title" class="title">Whiskers</h1>
+      <p id="tribute-info" class="tribute-info">
+        A Tribute to a Beloved Feline Friend
+      </p>
+      <figure id="img-div" class="img-div">
         <img
           id="image"
+          class="image"
           src="./assets/images/whiskers.jpg"
           alt="A black cat with blue whiskers sits on a pink background, looking up at the sky"
         />
-        <figcaption id="img-caption">
+        <figcaption id="img-caption" class="img-caption">
           Whiskers, in 2005, posing for the cover of Times magazine
         </figcaption>
       </figure>
 
-      <section id="tribute-timeline">
+      <section id="tribute-timeline" class="tribute-timeline">
         <ul>
           <li>
             <span>1999:</span> Born as a stray kitten on the streets of New York
@@ -77,12 +86,14 @@
         </ul>
       </section>
 
-      <p>
-        If you have time, you should read more about this incredible cat
-        <a id="tribute-link" href="https://en.wikipedia.org/wiki/Whiskers"
-          >here</a
-        >.
-      </p>
+      <section id="footer" class="footer">
+        <p>
+          If you have time, you should read more about this incredible cat
+          <a id="tribute-link" href="https://en.wikipedia.org/wiki/Whiskers"
+            >here</a
+          >.
+        </p>
+      </section>
     </main>
   </body>
 </html>
