Specify hyperlink target

--- a/index.html
+++ b/index.html
@@ -89,7 +89,11 @@
       <section id="footer" class="footer">
         <p>
           If you have time, you should read more about this incredible cat
-          <a id="tribute-link" href="https://en.wikipedia.org/wiki/Whiskers"
+          <a
+            id="tribute-link"
+            href="https://en.wikipedia.org/wiki/Whiskers"
+            target="_blank"
+            rel="noreferrer noopener"
             >here</a
           >.
         </p>
